  reality" realm states such as invisibility.

- @filter, @infilter, and @listen do regular expression matches if
  set 'regexp'. They do not evaluate themselves before matching,
  if set 'no_parse'.

- A new attribute flag, 'case', controls whether regular expression matching
  is case-sensitive, for $-commands, ^-listens, @filter, @infilter, and
  @listen.

-----------------------------------------------------------------------------

CHANGES TO COMMANDS

- @aconnect and @adisconnect attributes are triggered consistently on all
  connections and disconnections, with a reason in %0 and the player's
  resulting number of open connections in %1.

- Players can now specify multiple aliases for themselves (up to
  the conf parameter player_aliases_limit), via @alias, separating
  aliases with ';'. Players no longer inherit @alias from their
  parent (this never made sense, or worked properly, anyway).

- Some commands that would normally be queued can now be executed
  immediately, using the /now switch: @dolist/now (@iter), @force/now,
  @switch/now (@branch), @trigger/now (@call), @verb/now
  force() and trigger() now behave like @force/now and @trigger/now.
  The new conf parameters command_invocation_limit and 
  command_recursion_limit are used to limit this behavior.

- Commands added via @addcommand are now run immediately. Also, these
  commands now respect an escaped-out ':', as well as the regexp and
  case attribute flags.

- A new switch, @addcommand/preserve, causes the text of an added
  command to be executed by the player, not by the specified object,
  unless the player is God (for security reasons).

- Custom comsys headers can now be specified for channels, via
  @channel/header. These headers can be listed via @clist/header.
  Also, the @channel command now interprets its arguments, and channel
  descriptions are passed through a sanity check.

- The new Spoof comsys flag, when set on a channel, replaces player names